@startuml
title Class Diagram — Доменная модель

class Robot {
    - id: UUID
    - name: string
    - type: string
    - status: RobotStatus
    - location: Location
    + assignTask(task: Task): void
    + changeStatus(newStatus: RobotStatus): void
}

enum RobotStatus {
    IDLE
    BUSY
    MAINTENANCE
    OFFLINE
}

class Task {
    - id: UUID
    - description: string
    - status: TaskStatus
    - priority: int
    - assignedRobot: Robot
    + complete(): void
    + reassign(newRobot: Robot): void
}

enum TaskStatus {
    PENDING
    IN_PROGRESS
    COMPLETED
    FAILED
}

class Location {
    - id: UUID
    - name: string
    - address: string
    - capacity: int
    + getAvailableRobots(): Robot[]
}

class Order {
    - id: UUID
    - status: OrderStatus
    - tasks: Task[]
    + addTask(task: Task): void
    + complete(): void
}

enum OrderStatus {
    CREATED
    IN_PROGRESS
    COMPLETED
    CANCELLED
}

Robot "1" -- "0..*" Task : assigned
Task "1" -- "1" Order : belongs to
Location "1" -- "0..*" Robot : contains

@enduml